@@ -116,6 +116,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Haskell                Dagit
 - HicEst                 Georg Petrich
 - HQ9+                   Benny Baumann
+- HTML5                  Robert Lidberg
 - Icon                   Matt Oates
 - Ini                    Deguix
 - Inno                   Thomas Klinger
